Fix email to info@znsoarchitects.com, align back-to-top button with WhatsApp

--- a/styles.css
+++ b/styles.css
@@ -2797,7 +2797,7 @@ h1::selection, h2::selection, h3::selection {
 
 .back-to-top {
     position: fixed;
-    bottom: 100px;
+    bottom: 30px;
     right: 100px;
     width: 50px;
     height: 50px;
@@ -2831,8 +2831,8 @@ h1::selection, h2::selection, h3::selection {
 
 @media (max-width: 768px) {
     .back-to-top {
-        bottom: 160px;
-        right: 20px;
+        bottom: 30px;
+        right: 90px;
         width: 44px;
         height: 44px;
     }
